# directnet

./: AUTHORS  COMPILE  ChangeLog  DHT  GENERATED  Makefile  Makefile.am  Makefile.in  NEWS  PROTOCOL  README  README.LOCKS  TODO  aclocal.m4  acsite.m4  bgnet.xcf  build-gaim-plugin-mingw.sh  client.c  client.h  compilehelp  config.h.in  configure  configure.ac  connection.c  directnet.c  directnet.h  dntest.sh  getcyfer.sh  gpg.c  hash.c  hash.h  server.c  ui.c  ui.h
autopackage/: default.apspec
directnet/: AUTHORS  COMPILE  ChangeLog  Makefile  Makefile.am  Makefile.in  PROTOCOL  README  TODO  aclocal.m4  acsite.m4  build-gaim-plugin-mingw.sh  compilehelp  config.h.in  configure  configure.ac  connection.c  connection.h  directnet-20041109-1.tar.bz2  directnet.c  directnet.desktop  directnet.h  dnlogo.xcf  getcyfer.sh  gpg-fake.c  gpg.c  hash.c  hash.h  server.c  server.h  ui.c
directnet/autopackage/: default.apspec
directnet/directnet/: Makefile  gpg.h
directnet/macros/: fltk.m4  readline.m4
directnet/src/: Makefile.am  Makefile.in  auth.h  chat.h  client.c  client.h  connection.c  connection.h  directnet.c  directnet.h  enc.h  fake.cc  globals.h  gpg.h  hash.c  hash.h  keepalive.c  lock.c  lock.h  server.c  server.h  ui.h  whereami.h
directnet/src/auth-gpg/: Makefile.am  Makefile.in  gpg.c
directnet/src/auth-none/: Makefile.in
directnet/src/enc-cyfer/: CYFER.README  Makefile.am  Makefile.in  cyfer-0.6.0.dn.diff  cyfer.c
directnet/src/enc-fake/: Makefile.am  Makefile.in  gpg-fake.c
directnet/src/enc-gpg/: Makefile.in
directnet/src/gaim-plugin/: Makefile.am  Makefile.in  gaim-plugin.c  gaim-plugin.h
directnet/src/gaim2-plugin/: Makefile.in  gaim-plugin.c  gaim-plugin.h
directnet/src/hub/: Makefile.in  hub.c
directnet/src/ui-curses/: DisplayWindow.cc  DisplayWindow.h  InputParser.cc  InputParser.h  InputWindow.cc  InputWindow.h  Makefile.am  Makefile.in  StatusWindow.h  ui.cc
directnet/src/ui-customtest/: Makefile  ui.c
directnet/src/ui-dumb/: Makefile.am  Makefile.in  ui.c
directnet/src/ui-fltk/: AwayWindow.cc  AwayWindow.fl  AwayWindow.h  BuddyWindow.cc  BuddyWindow.fl  BuddyWindow.h  ChatWindow.cc  ChatWindow.fl  ChatWindow.h  Makefile.in  NameWindow.cc  NameWindow.fl  NameWindow.h  ui.cc  ui_fl.flui  ui_fl.h
directnet/src/ui-slang/: Makefile.in
directnet/src/ui-wx/: Makefile.in  ui.cc
directnet/tests/: mkfnd  mkkey.c  mkmsg  mkmsg.c  msg
directnet_site/: index.php  menu.html  morepage.php
directnet_site/pages/: download.html  main.html  readme.html  sf.html
docs/: ASC  CHAT  DHT  ENCRYPTION  IMPLEMENTATION  Makefile.am  Makefile.in  PROTOCOL
macros/: curses.m4  fltk.m4  pthread.m4  wxwin.m4
scripts/: build-jar.sh  gaim.pc  gtk+-2.0.pc
src/: Makefile.am  Makefile.in  auth.h  binseq.cc  binseq.h  chat.c  chat.cc  chat.h  client.c  client.cc  client.h  compat.h  connection.c  connection.cc  connection.h  dht.cc  dht.h  dhtdot.cc  directnet.c  directnet.cc  directnet.h  dn_event.h  dnconfig.c  dnconfig.cc  dnconfig.h  enc.h  fake.cc  gaim-plugin.h  globals.h  gpg.c  hash.c  hash.cc  hash.h  keepalive.c  keepalive.h  lock.c  lock.h  message.cc  message.h  route.cc  (+8 more)
src/auth-gpg/: Makefile.in  gpg.c  gpg.cc
src/auth-none/: Makefile.am  Makefile.in  auth-none.c
src/compat/: gettimeofday.c
src/directnet/: auth.h  compat.h  connection.h  dht.h  directnet.h  dnconfig.h  message.h
src/enc-cyfer/: Makefile.am  Makefile.in  cyfer-0.6.0.dn.diff  cyfer.c  cyfer.cc
src/enc-fake/: Makefile.in  gpg-fake.c
src/enc-gpg/: Makefile.am  Makefile.in  gpg.c
src/gaim-plugin/: DirectNet.xcf  Makefile.am  Makefile.in  gaim-plugin.c  gaim-plugin.h
src/gaim2-plugin/: Makefile.am  Makefile.in  cmd.c  event.c  event.cc  gaim-plugin.c  gaim-plugin.cc  gaim-plugin.h
src/hub/: Makefile.am  Makefile.in  hub.c
src/libdirectnet/: binseq.cc  chat.cc  client.cc  connection.cc  dht.cc  dhtdot.cc  directnet.cc  dnconfig.cc  message.cc  route.cc  server.cc
src/libdirectnet/auth-gpg/: Makefile.am  Makefile.in  gpg.cc
src/libdirectnet/directnet/: binseq.h  chat.h  client.h  directnet.h  dn_event.h  enc.h  route.h  server.h  ui.h
src/libdirectnet/enc-cyfer/: Makefile.am  Makefile.in  cyfer-0.6.0.dn.diff  cyfer.cc
src/ui-curses/: DisplayWindow.cc  InputParser.cc  InputParser.h  InputWindow.cc  InputWindow.h  Makefile.am  Makefile.in  StatusWindow.cc  ui.c  ui.cc
src/ui-customtest/: Makefile  ui.c  ui.cc
src/ui-dumb/: Makefile.am  Makefile.in  ui.c  ui.cc
src/ui-fltk/: AutoConnWindow.cc  AutoConnWindow.fl  AutoConnWindow.h  AutoConnYNWindow.cc  AutoConnYNWindow.fl  AutoConnYNWindow.h  BuddyWindow.cc  BuddyWindow.fl  BuddyWindow.h  ChannelWindow.cc  ChannelWindow.fl  ChannelWindow.h  ChatWindow.cc  ChatWindow.fl  ChatWindow.h  DHTWindow.cc  DHTWindow.fl  DHTWindow.h  Fl_Help_View.H  Makefile.am  Makefile.in  NameWindow.cc  NameWindow.fl  NameWindow.h  QWindow.cc  QWindow.fl  QWindow.h  dn-toplogo.ppm  dn-toplogo.xcf.uu  event.cc  ipc.cc  ipc.h  ui.cc  ui_fl.cc
src/ui-java/: Makefile.in  ui.cc
src/ui-java/net/imdirect/directnet/: UI.java
src/ui-slang/: Makefile.am  Makefile.in  ui.cc
src/ui-wx/: Makefile.am  Makefile.in  ui.cc
tests/: gpggettesttkey.sh  key  mkfnd.c  mkkey
